bayan_iptables
# Generated by iptables-save v1.6.0 on Mon Nov 14 14:48:42 2016
*mangle
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
:MARK1 - [0:0]
:MARK2 - [0:0]
:MARK3 - [0:0]
-A PREROUTING -i ap0 -m conntrack --ctstate NEW -m statistic --mode random --probability 1.00000000000 -j MARK1
-A PREROUTING -i ap0 -m conntrack --ctstate NEW -m statistic --mode random --probability 0.33000000007 -j MARK2
-A PREROUTING -i ap0 -m conntrack --ctstate NEW -m statistic --mode random --probability 0.33000000007 -j MARK3
-A MARK1 -j MARK --set-xmark 0x1/0xffffffff
-A MARK1 -j CONNMARK --save-mark --nfmask 0xffffffff --ctmask 0xffffffff
-A MARK2 -j MARK --set-xmark 0x2/0xffffffff
-A MARK2 -j CONNMARK --save-mark --nfmask 0xffffffff --ctmask 0xffffffff
-A MARK3 -j MARK --set-xmark 0x3/0xffffffff
-A MARK3 -j CONNMARK --save-mark --nfmask 0xffffffff --ctmask 0xffffffff
COMMIT
# Completed on Mon Nov 14 14:48:42 2016
# Generated by iptables-save v1.6.0 on Mon Nov 14 14:48:42 2016
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
:DOCKER - [0:0]
:MARK1 - [0:0]
:MARK2 - [0:0]
:MARK3 - [0:0]
-A PREROUTING -m addrtype --dst-type LOCAL -j DOCKER
-A OUTPUT ! -d 127.0.0.0/8 -m addrtype --dst-type LOCAL -j DOCKER
-A POSTROUTING -m mark --mark 0x1 -j MARK1
-A POSTROUTING -m mark --mark 0x2 -j MARK2
-A POSTROUTING -m mark --mark 0x3 -j MARK3
-A POSTROUTING -s 172.17.0.0/16 ! -o docker0 -j MASQUERADE
-A POSTROUTING -j MASQUERADE
-A DOCKER -i docker0 -j RETURN
COMMIT
# Completed on Mon Nov 14 14:48:42 2016
# Generated by iptables-save v1.6.0 on Mon Nov 14 14:48:42 2016
*filter
:INPUT ACCEPT [1022:106308]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [695:116413]
:DOCKER - [0:0]
:DOCKER-ISOLATION - [0:0]
-A FORWARD -j DOCKER-ISOLATION
-A FORWARD -o docker0 -j DOCKER
-A FORWARD -o docker0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i docker0 ! -o docker0 -j ACCEPT
-A FORWARD -i docker0 -o docker0 -j ACCEPT
-A DOCKER-ISOLATION -j RETURN
COMMIT
# Completed on Mon Nov 14 14:48:42 2016
